# demo-scraping

./: .gitignore  README.md  pyproject.toml
src/analysis/: analysis.ipynb  analysis.py
src/crypto_prices/: scraper.py  test.json
